--- a/src/dev.scss
+++ b/src/dev.scss
@@ -13,9 +13,9 @@ html,body{
 
   .my-modal{
     background: #fff;
-    padding: 20px;
+    padding: 200px 0;
   }
-  
+
   button{
     border: none;
     display: block;
